k8s/app/flowforge-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowforge-api
  namespace: flowforge
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: flowforge.internal.tesco.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flowforge-api
                port:
                  number: 8080
